I am fixing a bit and working on the check() function. Will work on it tmr.

--- a/FOL_model_checking.ipynb
+++ b/FOL_model_checking.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 41,
       "metadata": {
         "id": "UnGxKvPhF-6w"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 42,
       "metadata": {
         "id": "w-DmwcdqISro"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 43,
       "metadata": {
         "id": "J5sJSwtmIWQx"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 44,
       "metadata": {
         "id": "G1zhHQ2DIXsQ"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 45,
       "metadata": {
         "id": "K_ODKxEhIve7"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 46,
       "metadata": {
         "id": "WqOjdtJEIxGC"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 47,
       "metadata": {
         "id": "j4hA3SzhIyaJ"
       },
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 48,
       "metadata": {
         "id": "Y82NuUCCJbTy"
       },
@@ -311,10 +311,11 @@
         "\t\tcheck_type(l, list, \"l\")\n",
         "\t\tlst = []\n",
         "\t\tfor item in l:\n",
-        "\t\t\tif item.isinstance(C):\n",
-        "\t\t\t\treturn lst.append(self._c_dic[item])\n",
+        "\t\t\tif isinstance(item, C):\n",
+        "\t\t\t\tlst.append(self._c_dic[item])\n",
         "\t\t\telse:\n",
-        "\t\t\t\treturn item\n",
+        "\t\t\t\tlst.append(item)\n",
+        "\t\treturn lst # Il faut que nous retournions une liste, non?\n",
         "\n",
         "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
         "\tdef __str__(self):\n",
@@ -338,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 49,
       "metadata": {
         "id": "T7w0KRlFJhbJ"
       },
@@ -347,7 +348,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "interpretation function: {Sabine: 1, tall: {1}, eat: {(1, 2)}, like: {(1, 3)}}\n"
+            "The interpretation function: {Sabine: 1, tall: {1}, eat: {(1, 2)}, like: {(1, 3)}}\n"
           ]
         }
       ],
@@ -362,12 +363,12 @@
         "i_func = InterpretationFunc({Sabine: 1}, {tall: {(1)}, eat: {(1, 2)}, like: {(1, 3)}})\n",
         "\n",
         "# print it\n",
-        "print(\"interpretation function:\", i_func)"
+        "print(\"The interpretation function:\", i_func)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 50,
       "metadata": {
         "id": "NiusaZuSKpU4"
       },
@@ -401,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 51,
       "metadata": {
         "id": "IbVxbQgJKmVw"
       },
@@ -410,7 +411,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "model: {D={1, 2, 3}; I={Sabine: 1, tall: {1}, eat: {(1, 2)}, like: {(1, 3)}}}\n"
+            "The model is : {D={1, 2, 3}; I={Sabine: 1, tall: {1}, eat: {(1, 2)}, like: {(1, 3)}}}\n"
           ]
         }
       ],
@@ -418,7 +419,7 @@
         "# instantiate a model\n",
         "m = Model({1, 2, 3}, i_func)\n",
         "# print it\n",
-        "print(\"model:\", m)"
+        "print(\"The model is :\", m)"
       ]
     },
     {
@@ -444,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "_lv7TcRXLY6Y"
       },
@@ -466,16 +467,24 @@
         "\tdef assign(self, x, d):\n",
         "\t\tcheck_type(x, V, \"x\")\n",
         "\t\tcheck_type(d, int, \"d\")\n",
-        "\t\t\n",
-        "\t\tpass; # TODO\n",
+        "\t\t# Check if x:=d is already in the dictionary.\n",
+        "\t\tdic = self._dic.copy() # We create a copy of the dictionary.\n",
+        "\t\tif self._dic[x] != d:\n",
+        "\t\t\tdic[x] = d # We add the new assignment to the copy.\n",
+        "\t\treturn VarAssignment(dic) # We return the new assignment.\n",
         "\t\n",
         "\t# Returns the list obtained from `l` by replacing all variables by their assignments (other elements should appear unaffected).\n",
         "\t# (Be aware that this function returns a list and not a tuple. If you need a tuple, use the `tuple` function to convert the list into one.)\n",
         "\t# l: list\n",
         "\tdef map(self, l):\n",
         "\t\tcheck_type(l, list, \"l\")\n",
-        "\t\t\n",
-        "\t\tpass; # TODO\n",
+        "\t\tlst = [] # We create an empty list.\n",
+        "\t\tfor item in l: # Iterate over the list l.\n",
+        "\t\t\tif isinstance(item,V):\n",
+        "\t\t\t\tlst.append(self._dic[item]) # We add the assignment of the variable to the list.\n",
+        "\t\t\telse:\n",
+        "\t\t\t\tlst.append(item)\n",
+        "\t\treturn lst\n",
         "\t\n",
         "\t# Returns a string representation of the object. Used to print the object in a nice way.\n",
         "\tdef __str__(self):\n",
@@ -494,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "id": "ud96YJ-VLuQy"
       },
@@ -528,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "id": "IamyUsHWL19b"
       },
@@ -552,12 +561,36 @@
         "\tdef check(self, m, f):\n",
         "\t\tcheck_type(m, Model, \"m\")\n",
         "\t\tcheck_type(f, VarAssignment, \"f\")\n",
-        "\t\t\n",
-        "\t\tpass; # TODO\n",
+        "\t\t# TODO: I am still thinking about this,\n",
+        "\t\t# not sure where to put the assign function.\n",
+        "\t\targs = f.map(self._args) # We map the arguments of the predicate application.\n",
+        "\t\tinterpreted_args = tuple(args) # Convert the mapped arguments into a tuple.\n",
+        "\t\treturn interpreted_args in m.i_func._p_dic[self._pred] # We check if the predicate application is true in the model.\n",
         "\t\n",
         "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
         "\tdef __str__(self):\n",
         "\t\treturn f\"{self._pred}({','.join([str(x) for x in self._args])})\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 63,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1}\n",
+            "[Sabine]\n",
+            "The formula:  tall(Sabine) is False\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(m.i_func[tall])\n",
+        "print(PredApp(tall, [Sabine])._args)\n",
+        "print(\"The formula: \", PredApp(tall, [Sabine]), \"is\", PredApp(tall, [Sabine]).check_closed(m))"
       ]
     },
     {
@@ -649,7 +682,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "local",
       "language": "python",
       "name": "python3"
     },
@@ -663,11 +696,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9"
+      "version": "3.10.10"
     },
     "vscode": {
       "interpreter": {
-        "hash": "13427e9d61bb2f9318a4993daf3135721ffb44e6163d7e44b148ec8ab79fb7ff"
+        "hash": "aca542c5b9829747dc5df24047f1ee80435073a11f8e7711844b8ed0e49cea0c"
       }
     }
   },
