--- a/FOL_model_checking.ipynb
+++ b/FOL_model_checking.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "UnGxKvPhF-6w"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "id": "w-DmwcdqISro"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
         "id": "J5sJSwtmIWQx"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 37,
       "metadata": {
         "id": "G1zhHQ2DIXsQ"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 38,
       "metadata": {
         "id": "K_ODKxEhIve7"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 39,
       "metadata": {
         "id": "WqOjdtJEIxGC"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 40,
       "metadata": {
         "id": "j4hA3SzhIyaJ"
       },
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 41,
       "metadata": {
         "id": "Y82NuUCCJbTy"
       },
@@ -311,10 +311,11 @@
         "\t\tcheck_type(l, list, \"l\")\n",
         "\t\tlst = []\n",
         "\t\tfor item in l:\n",
-        "\t\t\tif item.isinstance(C):\n",
-        "\t\t\t\treturn lst.append(self._c_dic[item])\n",
+        "\t\t\tif isinstance(item, C):\n",
+        "\t\t\t\tlst.append(self._c_dic[item])\n",
         "\t\t\telse:\n",
-        "\t\t\t\treturn item\n",
+        "\t\t\t\tlst.append(item)\n",
+        "\t\treturn lst\n",
         "\n",
         "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
         "\tdef __str__(self):\n",
@@ -338,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 42,
       "metadata": {
         "id": "T7w0KRlFJhbJ"
       },
@@ -367,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 43,
       "metadata": {
         "id": "NiusaZuSKpU4"
       },
@@ -401,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 44,
       "metadata": {
         "id": "IbVxbQgJKmVw"
       },
@@ -444,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "_lv7TcRXLY6Y"
       },
@@ -466,16 +467,20 @@
         "\tdef assign(self, x, d):\n",
         "\t\tcheck_type(x, V, \"x\")\n",
         "\t\tcheck_type(d, int, \"d\")\n",
-        "\t\t\n",
-        "\t\tpass; # TODO\n",
+        "\t\treturn VarAssignment({**self._dic, x: d})\n",
         "\t\n",
         "\t# Returns the list obtained from `l` by replacing all variables by their assignments (other elements should appear unaffected).\n",
         "\t# (Be aware that this function returns a list and not a tuple. If you need a tuple, use the `tuple` function to convert the list into one.)\n",
         "\t# l: list\n",
         "\tdef map(self, l):\n",
         "\t\tcheck_type(l, list, \"l\")\n",
-        "\t\t\n",
-        "\t\tpass; # TODO\n",
+        "\t\tlst = []\n",
+        "\t\tfor item in l:\n",
+        "\t\t\tif isinstance(item, V):\n",
+        "\t\t\t\tlst.append(self._dic[item])\n",
+        "\t\t\telse:\n",
+        "\t\t\t\tlst.append(item)\n",
+        "\t\treturn lst\n",
         "\t\n",
         "\t# Returns a string representation of the object. Used to print the object in a nice way.\n",
         "\tdef __str__(self):\n",
@@ -494,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "id": "ud96YJ-VLuQy"
       },
@@ -528,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "IamyUsHWL19b"
       },
@@ -552,8 +557,7 @@
         "\tdef check(self, m, f):\n",
         "\t\tcheck_type(m, Model, \"m\")\n",
         "\t\tcheck_type(f, VarAssignment, \"f\")\n",
-        "\t\t\n",
-        "\t\tpass; # TODO\n",
+        "\t\treturn tuple(m.i_func.map(f.map(self._args))) in m.i_func[self._pred]\n",
         "\t\n",
         "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
         "\tdef __str__(self):\n",
@@ -576,12 +580,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "vxHNe4F_ONx6"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "class Neg(Formula):\n",
+        "    # pred: P\n",
+        "\t# args: list of V·s and C·s\n",
+        "\tdef __init__(self, pred, args):\n",
+        "\t\tcheck_type(pred, P, \"pred\")\n",
+        "\t\tassert (pred.arity == len(args)), f\"{pred.arity} argument·s expected but {len(args)} given.\"\n",
+        "\t\tcheck_type(args, list, \"args\")\n",
+        "\t\t\n",
+        "\t\tself._pred = pred\n",
+        "\t\tself._args = args\n",
+        "\t\n",
+        "\t# Checks whether the formula is true according to the model `m` and the variable assignment `f`.\n",
+        "\t# m: Model\n",
+        "\t# f: VarAssignment\n",
+        "\tdef check(self, m, f):\n",
+        "\t\tcheck_type(m, Model, \"m\")\n",
+        "\t\tcheck_type(f, VarAssignment, \"f\")\n",
+        "\t\treturn tuple(m.i_func.map(f.map(self._args))) not in m.i_func[self._pred]\n",
+        "\t\n",
+        "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
+        "\tdef __str__(self):\n",
+        "\t\treturn f\"¬{self._pred}({','.join([str(x) for x in self._args])})\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# instantiate constants and predicates\n",
+        "Sabine = C(\"Sabine\")\n",
+        "Marcel = C(\"Marcel\")\n",
+        "human = P(\"human\", 1)\n",
+        "electric = P(\"electric\", 1)\n",
+        "truck = P(\"truck\", 1)\n",
+        "drive = P(\"drive\", 2)\n",
+        "# instanciate domain, interpretation function and model\n",
+        "domain = {1, 2, 3}\n",
+        "i_func = InterpretationFunc({Sabine: 1, Marcel: 2}, \n",
+        "                            {human: {(1,), (2,)}, electric: {(3,)}, truck: {(3,)}, drive: {(2, 3)}})\n",
+        "m = Model(domain, i_func)\n",
+        "# instantiate assignment\n",
+        "x = V(\"x\") # variable\n",
+        "y = V(\"y\") # variable\n",
+        "f = VarAssignment({x: 1, y: 3})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¬human(Sabine) is False\n",
+            "¬electric(x) is True\n",
+            "¬drive(Marcel,y) is False\n"
+          ]
+        }
+      ],
+      "source": [
+        "# instantiate formulas\n",
+        "formula1 = Neg(human, [Sabine])\n",
+        "formula2 = Neg(electric, [x])\n",
+        "formula3 = Neg(drive, [Marcel, y])\n",
+        "print(f\"{formula1} is {formula1.check(m, f)}\")\n",
+        "print(f\"{formula2} is {formula2.check(m, f)}\")\n",
+        "print(f\"{formula3} is {formula3.check(m, f)}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -593,6 +669,20 @@
         "*  Same instructions for `Ex`, a sub-class for existential quantification.\n",
         "*  (You can use the ∃ symbol in `__str__`.)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -663,7 +753,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9"
+      "version": "3.10.10"
     },
     "vscode": {
       "interpreter": {
