--- a/FOL_model_checking.ipynb
+++ b/FOL_model_checking.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 84,
       "metadata": {
         "id": "UnGxKvPhF-6w"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 85,
       "metadata": {
         "id": "w-DmwcdqISro"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 86,
       "metadata": {
         "id": "J5sJSwtmIWQx"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 87,
       "metadata": {
         "id": "G1zhHQ2DIXsQ"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 88,
       "metadata": {
         "id": "K_ODKxEhIve7"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 89,
       "metadata": {
         "id": "WqOjdtJEIxGC"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 90,
       "metadata": {
         "id": "j4hA3SzhIyaJ"
       },
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 91,
       "metadata": {
         "id": "Y82NuUCCJbTy"
       },
@@ -311,7 +311,7 @@
         "\t\tcheck_type(l, list, \"l\")\n",
         "\t\tlst = []\n",
         "\t\tfor item in l:\n",
-        "\t\t\tif isinstance(item, C):\n",
+        "\t\t\tif isinstance(item, C) and item in self._c_dic.keys():\n",
         "\t\t\t\tlst.append(self._c_dic[item])\n",
         "\t\t\telse:\n",
         "\t\t\t\tlst.append(item)\n",
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 92,
       "metadata": {
         "id": "T7w0KRlFJhbJ"
       },
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 93,
       "metadata": {
         "id": "NiusaZuSKpU4"
       },
@@ -402,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 94,
       "metadata": {
         "id": "IbVxbQgJKmVw"
       },
@@ -445,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 95,
       "metadata": {
         "id": "_lv7TcRXLY6Y"
       },
@@ -476,7 +476,7 @@
         "\t\tcheck_type(l, list, \"l\")\n",
         "\t\tlst = []\n",
         "\t\tfor item in l:\n",
-        "\t\t\tif isinstance(item, V):\n",
+        "\t\t\tif isinstance(item, V) and item in self._dic.keys():\n",
         "\t\t\t\tlst.append(self._dic[item])\n",
         "\t\t\telse:\n",
         "\t\t\t\tlst.append(item)\n",
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 96,
       "metadata": {
         "id": "ud96YJ-VLuQy"
       },
@@ -533,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 97,
       "metadata": {
         "id": "IamyUsHWL19b"
       },
@@ -580,7 +580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 98,
       "metadata": {
         "id": "vxHNe4F_ONx6"
       },
@@ -612,7 +612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 99,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -636,7 +636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 100,
       "metadata": {},
       "outputs": [
         {
@@ -672,26 +672,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "class Ex(Formula):\n",
+        "    # x: V\n",
+        "    # formula: Formula\n",
+        "    def __init__(self, x, formula):\n",
+        "        check_type(x, V, \"x\")\n",
+        "        check_type(formula, Formula, \"formula\")\n",
+        "        \n",
+        "        self._x = x\n",
+        "        self._formula = formula\n",
+        "\n",
+        "    # Checks whether the formula is true according to the model `m` and the variable assignment `f`.\n",
+        "    def check(self, m, f):\n",
+        "        check_type(m, Model, \"m\")\n",
+        "        check_type(f, VarAssignment, \"f\")\n",
+        "        for d in m.domain:\n",
+        "            if self._formula.check(m, f.assign(self._x, d)):\n",
+        "                return True\n",
+        "        return False\n",
+        "\n",
+        "    # Returns a string representation of the object. Used to print the object in a readable way.\n",
+        "    def __str__(self):\n",
+        "        return f\"∃{self._x}.{self._formula}\""
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 102,
       "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "e5hjOINaOi6r"
-      },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "∃x.electric(x) is True\n"
+          ]
+        }
+      ],
+      "source": [
+        "# test\n",
+        "ex1 = Ex(x, PredApp(electric, [x]))\n",
+        "print(f\"{ex1} is {ex1.check(m, f)}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -706,12 +732,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 103,
       "metadata": {
         "id": "R9w6TS_JOpgj"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "class Conj(Formula):\n",
+        "\n",
+        "    # formula1: Formula\n",
+        "    # formula2: Formula\n",
+        "    def __init__(self, formula1, formula2):\n",
+        "        check_type(formula1, Formula, \"formula1\")\n",
+        "        check_type(formula2, Formula, \"formula2\")\n",
+        "        \n",
+        "        self._formula1 = formula1\n",
+        "        self._formula2 = formula2\n",
+        "\n",
+        "    # Checks whether the formula is true according to the model `m` and the variable assignment `f`.\n",
+        "    def check(self, m, f):\n",
+        "        check_type(m, Model, \"m\")\n",
+        "        check_type(f, VarAssignment, \"f\")\n",
+        "        return self._formula1.check(m, f) and self._formula2.check(m, f)\n",
+        "\n",
+        "    # Returns a string representation of the object. Used to print the object in a readable way.\n",
+        "    def __str__(self):\n",
+        "        return f\"{self._formula1} ∧ {self._formula2}\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 104,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "∃y.human(y) ∧ electric(y) is True\n"
+          ]
+        }
+      ],
+      "source": [
+        "# test\n",
+        "formula1 = Ex(y, PredApp(human, [y]))\n",
+        "formula2 = PredApp(electric, [y])\n",
+        "conj = Conj(formula1, formula2)\n",
+        "print(f\"{conj} is {conj.check(m, f)}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -725,12 +793,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "zSO3_RdcSABv"
-      },
-      "outputs": [],
-      "source": []
+      "execution_count": 105,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "∃y.human(y) ∧ electric(y) is not closed\n",
+            "∃x.drive(Marcel,x) is closed\n",
+            "∃x.truck(x) is closed\n"
+          ]
+        }
+      ],
+      "source": [
+        "# instantiate formulas\n",
+        "formula1 = Ex(y, PredApp(human, [y]))\n",
+        "formula2 = PredApp(electric, [y])\n",
+        "formula3 = Ex(x, PredApp(truck, [x]))\n",
+        "formula4 = PredApp(drive, [Marcel, x])\n",
+        "# instantiate conjunction\n",
+        "conj1 = Conj(formula1, formula2)\n",
+        "ex1 = Ex(x, formula4)\n",
+        "# check closed\n",
+        "print(f\"{conj1} is {'' if conj1.check_closed(m) else 'not '}closed\")\n",
+        "print(f\"{ex1} is {'' if ex1.check_closed(m) else 'not '}closed\")\n",
+        "print(f\"{formula3} is {'' if formula3.check_closed(m) else 'not '}closed\")"
+      ]
     }
   ],
   "metadata": {
