I have finished reviewing the codes, and also added comments for readability. Great work Dan, thank you!

--- a/PL_model_checking_&_building.ipynb
+++ b/PL_model_checking_&_building.ipynb
@@ -250,6 +250,7 @@
         "\t# i_func: InterpretationFunc\n",
         "\tdef check(self, i_func):\n",
         "\t\tcheck_type(i_func, InterpretationFunc, \"i_func\")\n",
+        "\t\t# We check if the PLetter is true according to the interpretation function.\n",
         "\t\treturn i_func(self._p)\n",
         "\t\n",
         "\t# Returns the list of all (minimal) partial interpretation functions for which the valuation of the formula is the boolean value `value`.\n",
@@ -257,6 +258,7 @@
         "\t# (If you know what an iterator is, you can return an iterator instead of a list.)\n",
         "\tdef build(self, value=True):\n",
         "\t\tcheck_type(value, bool, \"value\")\n",
+        "\t\t# We return a list of one Partial interpretation function because the PLetter is atomic.\n",
         "\t\treturn [PartialInterpretationFunc({self._p: value})]\n",
         "\t\n",
         "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
@@ -324,6 +326,7 @@
         "\t# i_func: InterpretationFunc\n",
         "\tdef check(self, i_func):\n",
         "\t\tcheck_type(i_func, InterpretationFunc, \"i\")\n",
+        "\t\t# We return the negation of the check of the formula phi.\n",
         "\t\treturn not self._phi.check(i_func)\n",
         "\t\n",
         "\t# Returns the list of all (minimal) partial interpretation functions for which the valuation of the formula is the boolean value `value`.\n",
@@ -331,6 +334,7 @@
         "\t# (If you know what an iterator is, you can return an iterator instead of a list.)\n",
         "\tdef build(self, value=True):\n",
         "\t\tcheck_type(value, bool, \"value\")\n",
+        "\t\t# We return a list of all the partial interpretation functions of the formula phi with the negation of the value.\n",
         "\t\treturn self._phi.build(not value)\n",
         "\t\n",
         "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
@@ -414,6 +418,7 @@
         "\tdef build(self, value=True):\n",
         "\t\tcheck_type(value, bool, \"value\")\n",
         "\t\tl = []\n",
+        "\t\t# We return a list of all the partial interpretation functions of the formula phi and psi with the same value.\n",
         "\t\tfor item1 in self._phi.build(value):\n",
         "\t\t\tfor item2 in self._psi.build(value):\n",
         "\t\t\t\tif item1.merge(item2):\n",
@@ -559,8 +564,8 @@
         "# instantiate the list of partial interpretation functions\n",
         "l1 = [PartialInterpretationFunc({\"p\": True}), PartialInterpretationFunc({ \"q\": False}), PartialInterpretationFunc({\"r\": True})]\n",
         "l2 = [PartialInterpretationFunc({\"p\": True, \"q\": False})]\n",
-        "print(\"l1:\", l1)\n",
-        "print(\"l2:\", l2)"
+        "print(\"l1:\", l1) # (p ∨ ¬q ∨ r) is true when p is true or q is false or r is true\n",
+        "print(\"l2:\", l2) # (p ∧ ¬q) is true when p is true and q is false"
       ]
     },
     {
@@ -576,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "metadata": {
         "id": "LHg6FkTICwPp"
       },
@@ -585,7 +590,6 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "True\n",
             "p is true when [{'p': True}]\n"
           ]
         }
@@ -595,10 +599,6 @@
         "p = PLetter(\"p\")\n",
         "# build the list of the partial interpretation function of the formula\n",
         "f = p.build()\n",
-        "# check\n",
-        "for item in f:\n",
-        "    print(item(\"p\"))  # call the function __call__\n",
-        "# We can also use the following code:\n",
         "print(p, \"is true when\", f)"
       ]
     },
@@ -615,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 18,
       "metadata": {
         "id": "pBqr1BY7Cz6K"
       },
@@ -637,10 +637,10 @@
         "# instantiate formulas\n",
         "f1 = Neg(PLetter(\"p\"))\n",
         "f2 = Neg(PLetter(\"q\"))\n",
-        "f3 = Conj(PLetter(\"p\"), Neg(PLetter(\"p\")))\n",
-        "f4 = Conj(PLetter(\"p\"), PLetter(\"r\"))\n",
-        "f5 = Conj(PLetter(\"p\"), Neg(PLetter(\"r\")))\n",
-        "f6 = Conj(Neg(f1), Neg(Neg(f1)))\n",
+        "f3 = Conj(PLetter(\"p\"), Neg(PLetter(\"p\"))) # (p ∧ ¬p)\n",
+        "f4 = Conj(PLetter(\"p\"), PLetter(\"r\")) # (p ∧ r)\n",
+        "f5 = Conj(PLetter(\"p\"), Neg(PLetter(\"r\"))) # (p ∧ ¬r)\n",
+        "f6 = Conj(Neg(f1), Neg(Neg(f1))) # (¬(¬p) ∧ ¬p)\n",
         "\n",
         "\n",
         "# build the list of the partial interpretation function of the formula\n",
@@ -651,21 +651,7 @@
         "f5_b = f5.build()\n",
         "f6_b = f6.build()\n",
         "\n",
-        "# check\n",
-        "\"\"\"print(f1_b, \"for p:\")\n",
-        "for item in f1_b:\n",
-        "    print(item(\"p\"))  \n",
-        "print(f2_b, \"for q:\")\n",
-        "for item in f2_b:\n",
-        "    print(item(\"q\"))  \n",
-        "print(f3_b, \"for p and q:\")\n",
-        "for item in f3_b:\n",
-        "    print(item(\"p\"), item(\"q\"))  \n",
-        "print(f4_b, \"for p and r:\")\n",
-        "for item in f4_b:\n",
-        "    print(item(\"p\"), item(\"r\")) \"\"\"\n",
-        "    \n",
-        "# I think we can modify it a bit so that it looks prettier:\n",
+        "# print the interpretation of the formula\n",
         "print(f1, \"is true when\", f1_b)\n",
         "print(f2, \"is true when\", f2_b)\n",
         "print(f3, \"is true when\", f3_b)\n",
