--- a/FOL_model_checking.ipynb
+++ b/FOL_model_checking.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 40,
       "metadata": {
         "id": "UnGxKvPhF-6w"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 41,
       "metadata": {
         "id": "w-DmwcdqISro"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 42,
       "metadata": {
         "id": "J5sJSwtmIWQx"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 43,
       "metadata": {
         "id": "G1zhHQ2DIXsQ"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 44,
       "metadata": {
         "id": "K_ODKxEhIve7"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 45,
       "metadata": {
         "id": "WqOjdtJEIxGC"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 46,
       "metadata": {
         "id": "j4hA3SzhIyaJ"
       },
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 47,
       "metadata": {
         "id": "Y82NuUCCJbTy"
       },
@@ -309,6 +309,8 @@
         "\t# l: list of C·s and V·s\n",
         "\tdef map(self, l):\n",
         "\t\tcheck_type(l, list, \"l\")\n",
+        "\t\t# We create an empty list\n",
+        "\t\t# We iterate over l, if there are constants and they are in the dictionary, we put their interpretation in the list.\n",
         "\t\tlst = []\n",
         "\t\tfor item in l:\n",
         "\t\t\tif isinstance(item, C) and item in self._c_dic.keys():\n",
@@ -339,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 48,
       "metadata": {
         "id": "T7w0KRlFJhbJ"
       },
@@ -368,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 49,
       "metadata": {
         "id": "NiusaZuSKpU4"
       },
@@ -402,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 50,
       "metadata": {
         "id": "IbVxbQgJKmVw"
       },
@@ -445,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 51,
       "metadata": {
         "id": "_lv7TcRXLY6Y"
       },
@@ -467,6 +469,8 @@
         "\tdef assign(self, x, d):\n",
         "\t\tcheck_type(x, V, \"x\")\n",
         "\t\tcheck_type(d, int, \"d\")\n",
+        "\t\t# We return a new dictionary that is a copy of the present one, but with the new assignment by merging,\n",
+        "\t\t# Then we return a new VarAssignment object with the new dictionary.\n",
         "\t\treturn VarAssignment({**self._dic, x: d})\n",
         "\t\n",
         "\t# Returns the list obtained from `l` by replacing all variables by their assignments (other elements should appear unaffected).\n",
@@ -474,7 +478,10 @@
         "\t# l: list\n",
         "\tdef map(self, l):\n",
         "\t\tcheck_type(l, list, \"l\")\n",
+        "\t\t# We create a new empty list.\n",
         "\t\tlst = []\n",
+        "\t\t# We iterate over the list `l`,\n",
+        "\t\t# If the item is a variable and it is in the dictionary, we append the value of the variable to the new list.\n",
         "\t\tfor item in l:\n",
         "\t\t\tif isinstance(item, V) and item in self._dic.keys():\n",
         "\t\t\t\tlst.append(self._dic[item])\n",
@@ -499,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 52,
       "metadata": {
         "id": "ud96YJ-VLuQy"
       },
@@ -533,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 53,
       "metadata": {
         "id": "IamyUsHWL19b"
       },
@@ -557,6 +564,9 @@
         "\tdef check(self, m, f):\n",
         "\t\tcheck_type(m, Model, \"m\")\n",
         "\t\tcheck_type(f, VarAssignment, \"f\")\n",
+        "\t\t# We call the map() on the arguments of the predicates in f to get the list of values of the variables in f,\n",
+        "\t\t# Then we call map() of the InterpretationFunc of Model m to get the list of interpretations of the constants in m,\n",
+        "\t\t# Then we check if the tuple of the result is a key in the InterpretationFunc of m or not.\n",
         "\t\treturn tuple(m.i_func.map(f.map(self._args))) in m.i_func[self._pred]\n",
         "\t\n",
         "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
@@ -580,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 54,
       "metadata": {
         "id": "vxHNe4F_ONx6"
       },
@@ -603,6 +613,8 @@
         "\tdef check(self, m, f):\n",
         "\t\tcheck_type(m, Model, \"m\")\n",
         "\t\tcheck_type(f, VarAssignment, \"f\")\n",
+        "\t\t# Applying the same logic as check() of PredApp class,\n",
+        "\t\t# but we check if the tuple of the result is not a key in the InterpretationFunc of m or not.\n",
         "\t\treturn tuple(m.i_func.map(f.map(self._args))) not in m.i_func[self._pred]\n",
         "\t\n",
         "\t# Returns a string representation of the object. Used to print the object in a readable way.\n",
@@ -612,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -636,7 +648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -651,12 +663,12 @@
       ],
       "source": [
         "# instantiate formulas\n",
-        "formula1 = Neg(human, [Sabine])\n",
-        "formula2 = Neg(electric, [x])\n",
-        "formula3 = Neg(drive, [Marcel, y])\n",
-        "print(f\"{formula1} is {formula1.check(m, f)}\")\n",
-        "print(f\"{formula2} is {formula2.check(m, f)}\")\n",
-        "print(f\"{formula3} is {formula3.check(m, f)}\")"
+        "formula1 = Neg(human, [Sabine]) # Sabine is not human\n",
+        "formula2 = Neg(electric, [x])  # x is not electric\n",
+        "formula3 = Neg(drive, [Marcel, y]) # Marcel does not drive y\n",
+        "print(f\"{formula1} is {formula1.check(m, f)}\") # False\n",
+        "print(f\"{formula2} is {formula2.check(m, f)}\") # True\n",
+        "print(f\"{formula3} is {formula3.check(m, f)}\") # False"
       ]
     },
     {
@@ -672,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -690,6 +702,10 @@
         "    def check(self, m, f):\n",
         "        check_type(m, Model, \"m\")\n",
         "        check_type(f, VarAssignment, \"f\")\n",
+        "        # We iterate over the domain of the model m,\n",
+        "        # Then assign the variable x to each element in the domain,\n",
+        "        # Then check if the resulting formula is true or not in Model m.\n",
+        "        # If True then there exists a value in the domain of m that satisfies the formula and vice versa.\n",
         "        for d in m.domain:\n",
         "            if self._formula.check(m, f.assign(self._x, d)):\n",
         "                return True\n",
@@ -702,7 +718,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
@@ -715,8 +731,8 @@
       ],
       "source": [
         "# test\n",
-        "ex1 = Ex(x, PredApp(electric, [x]))\n",
-        "print(f\"{ex1} is {ex1.check(m, f)}\")"
+        "ex1 = Ex(x, PredApp(electric, [x])) # There exists x such that x is electric\n",
+        "print(f\"{ex1} is {ex1.check(m, f)}\") # True"
       ]
     },
     {
@@ -732,7 +748,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 59,
       "metadata": {
         "id": "R9w6TS_JOpgj"
       },
@@ -753,6 +769,7 @@
         "    def check(self, m, f):\n",
         "        check_type(m, Model, \"m\")\n",
         "        check_type(f, VarAssignment, \"f\")\n",
+        "        # Using the check() method of the two formulas to check if the conjunction is true or not.\n",
         "        return self._formula1.check(m, f) and self._formula2.check(m, f)\n",
         "\n",
         "    # Returns a string representation of the object. Used to print the object in a readable way.\n",
@@ -762,23 +779,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "∃y.human(y) ∧ electric(y) is True\n"
+            "∃y.human(y) ∧ electric(y) is True\n",
+            "∃y.human(y) ∧ electric(y) is False\n"
           ]
         }
       ],
       "source": [
         "# test\n",
-        "formula1 = Ex(y, PredApp(human, [y]))\n",
-        "formula2 = PredApp(electric, [y])\n",
-        "conj = Conj(formula1, formula2)\n",
-        "print(f\"{conj} is {conj.check(m, f)}\")"
+        "formula1 = Ex(y, PredApp(human, [y])) # There exists y such that y is human\n",
+        "formula2 = PredApp(electric, [y]) # y is electric\n",
+        "conj = Conj(formula1, formula2) # y is human, and there exists y (in the model) such that y is electric\n",
+        "ex1 = Ex(y, Conj(PredApp(human, [y]), PredApp(electric, [y]))) # There exists y such that y is human and y is electric\n",
+        "print(f\"{conj} is {conj.check(m, f)}\") # True\n",
+        "print(f\"{ex1} is {ex1.check(m, f)}\") # False"
       ]
     },
     {
@@ -793,7 +813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -808,17 +828,17 @@
       ],
       "source": [
         "# instantiate formulas\n",
-        "formula1 = Ex(y, PredApp(human, [y]))\n",
-        "formula2 = PredApp(electric, [y])\n",
-        "formula3 = Ex(x, PredApp(truck, [x]))\n",
-        "formula4 = PredApp(drive, [Marcel, x])\n",
+        "formula1 = Ex(y, PredApp(human, [y])) # There exists y such that y is human\n",
+        "formula2 = PredApp(electric, [y])   # y is electric\n",
+        "formula3 = Ex(x, PredApp(truck, [x])) # There exists x such that x is a truck\n",
+        "formula4 = PredApp(drive, [Marcel, x])  # Marcel drives x\n",
         "# instantiate conjunction\n",
-        "conj1 = Conj(formula1, formula2)\n",
-        "ex1 = Ex(x, formula4)\n",
+        "conj1 = Conj(formula1, formula2) # y is human, and there exists y (in the model) such that y is electric\n",
+        "ex1 = Ex(x, formula4) # There exists x such that Marcel drives x\n",
         "# check closed\n",
-        "print(f\"{conj1} is {'' if conj1.check_closed(m) else 'not '}closed\")\n",
-        "print(f\"{ex1} is {'' if ex1.check_closed(m) else 'not '}closed\")\n",
-        "print(f\"{formula3} is {'' if formula3.check_closed(m) else 'not '}closed\")"
+        "print(f\"{conj1} is {'' if conj1.check_closed(m) else 'not '}closed\") # not closed\n",
+        "print(f\"{ex1} is {'' if ex1.check_closed(m) else 'not '}closed\") # closed\n",
+        "print(f\"{formula3} is {'' if formula3.check_closed(m) else 'not '}closed\") # closed"
       ]
     }
   ],
@@ -846,7 +866,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "13427e9d61bb2f9318a4993daf3135721ffb44e6163d7e44b148ec8ab79fb7ff"
+        "hash": "b3ddeab9e244aeb028607eb40345c6b4dab54cc324ac715edb4aec0691fca7d0"
       }
     }
   },
