Slight mistake in the comment, fixed it

--- a/FOL_model_checking.ipynb
+++ b/FOL_model_checking.ipynb
@@ -795,7 +795,7 @@
         "# test\n",
         "formula1 = Ex(y, PredApp(human, [y])) # There exists y such that y is human\n",
         "formula2 = PredApp(electric, [y]) # y is electric\n",
-        "conj = Conj(formula1, formula2) # y is human, and there exists y (in the model) such that y is electric\n",
+        "conj = Conj(formula1, formula2) # y is electric, and there exists (another) y in the model such that y is electric\n",
         "ex1 = Ex(y, Conj(PredApp(human, [y]), PredApp(electric, [y]))) # There exists y such that y is human and y is electric\n",
         "print(f\"{conj} is {conj.check(m, f)}\") # True\n",
         "print(f\"{ex1} is {ex1.check(m, f)}\") # False"
