--- a/FOL_model_checking.ipynb
+++ b/FOL_model_checking.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 43,
       "metadata": {
         "id": "UnGxKvPhF-6w"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 44,
       "metadata": {
         "id": "w-DmwcdqISro"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 45,
       "metadata": {
         "id": "J5sJSwtmIWQx"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 46,
       "metadata": {
         "id": "G1zhHQ2DIXsQ"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 47,
       "metadata": {
         "id": "K_ODKxEhIve7"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 48,
       "metadata": {
         "id": "WqOjdtJEIxGC"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 49,
       "metadata": {
         "id": "j4hA3SzhIyaJ"
       },
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 50,
       "metadata": {
         "id": "Y82NuUCCJbTy"
       },
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 51,
       "metadata": {
         "id": "T7w0KRlFJhbJ"
       },
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 52,
       "metadata": {
         "id": "NiusaZuSKpU4"
       },
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 53,
       "metadata": {
         "id": "IbVxbQgJKmVw"
       },
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 54,
       "metadata": {
         "id": "_lv7TcRXLY6Y"
       },
@@ -506,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 55,
       "metadata": {
         "id": "ud96YJ-VLuQy"
       },
@@ -540,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 56,
       "metadata": {
         "id": "IamyUsHWL19b"
       },
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 57,
       "metadata": {
         "id": "vxHNe4F_ONx6"
       },
@@ -624,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -648,7 +648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
@@ -684,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -713,12 +713,13 @@
         "\n",
         "    # Returns a string representation of the object. Used to print the object in a readable way.\n",
         "    def __str__(self):\n",
-        "        return f\"∃{self._x}.{self._formula}\""
+        "        str_formula = str(self._formula) if isinstance(self._formula, PredApp) else f\"({self._formula})\"\n",
+        "        return f\"∃{self._x}.{str_formula}\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -748,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 62,
       "metadata": {
         "id": "R9w6TS_JOpgj"
       },
@@ -774,20 +775,22 @@
         "\n",
         "    # Returns a string representation of the object. Used to print the object in a readable way.\n",
         "    def __str__(self):\n",
-        "        return f\"{self._formula1} ∧ {self._formula2}\""
+        "        str_1 = str(self._formula1) if isinstance(self._formula1, PredApp) else f\"({self._formula1})\"\n",
+        "        str_2 = str(self._formula2) if isinstance(self._formula2, PredApp) else f\"({self._formula2})\"\n",
+        "        return f\"{str_1} ∧ {str_2}\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "∃y.human(y) ∧ electric(y) is True\n",
-            "∃y.human(y) ∧ electric(y) is False\n"
+            "(∃y.human(y)) ∧ electric(y) is True\n",
+            "∃y.(human(y) ∧ electric(y)) is False\n"
           ]
         }
       ],
@@ -813,14 +816,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "∃y.human(y) ∧ electric(y) is not closed\n",
+            "(∃y.human(y)) ∧ electric(y) is not closed\n",
             "∃x.drive(Marcel,x) is closed\n",
             "∃x.truck(x) is closed\n"
           ]
@@ -866,7 +869,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "b3ddeab9e244aeb028607eb40345c6b4dab54cc324ac715edb4aec0691fca7d0"
+        "hash": "13427e9d61bb2f9318a4993daf3135721ffb44e6163d7e44b148ec8ab79fb7ff"
       }
     }
   },
