--- a/PL_model_checking_&_building.ipynb
+++ b/PL_model_checking_&_building.ipynb
@@ -581,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "metadata": {
         "id": "LHg6FkTICwPp"
       },
@@ -615,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "metadata": {
         "id": "pBqr1BY7Cz6K"
       },
@@ -642,7 +642,6 @@
         "f5 = Conj(PLetter(\"p\"), Neg(PLetter(\"r\"))) # (p ∧ ¬r)\n",
         "f6 = Conj(Neg(f1), Neg(Neg(f1))) # (¬(¬p) ∧ ¬p)\n",
         "\n",
-        "\n",
         "# build the list of the partial interpretation function of the formula\n",
         "f1_b = f1.build()\n",
         "f2_b = f2.build()\n",
@@ -667,7 +666,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "local",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -685,7 +684,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "aca542c5b9829747dc5df24047f1ee80435073a11f8e7711844b8ed0e49cea0c"
+        "hash": "13427e9d61bb2f9318a4993daf3135721ffb44e6163d7e44b148ec8ab79fb7ff"
       }
     }
   },
