--- a/FOL_model_checking.ipynb
+++ b/FOL_model_checking.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 2,
       "metadata": {
         "id": "UnGxKvPhF-6w"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 3,
       "metadata": {
         "id": "w-DmwcdqISro"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 4,
       "metadata": {
         "id": "J5sJSwtmIWQx"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 5,
       "metadata": {
         "id": "G1zhHQ2DIXsQ"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 6,
       "metadata": {
         "id": "K_ODKxEhIve7"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 7,
       "metadata": {
         "id": "WqOjdtJEIxGC"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 8,
       "metadata": {
         "id": "j4hA3SzhIyaJ"
       },
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 9,
       "metadata": {
         "id": "Y82NuUCCJbTy"
       },
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 10,
       "metadata": {
         "id": "T7w0KRlFJhbJ"
       },
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 11,
       "metadata": {
         "id": "NiusaZuSKpU4"
       },
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 12,
       "metadata": {
         "id": "IbVxbQgJKmVw"
       },
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 13,
       "metadata": {
         "id": "_lv7TcRXLY6Y"
       },
@@ -506,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 14,
       "metadata": {
         "id": "ud96YJ-VLuQy"
       },
@@ -540,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 15,
       "metadata": {
         "id": "IamyUsHWL19b"
       },
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 30,
       "metadata": {
         "id": "vxHNe4F_ONx6"
       },
@@ -624,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -648,27 +648,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "¬human(Sabine) is False\n",
+            "¬human(y) is True\n",
             "¬electric(x) is True\n",
-            "¬drive(Marcel,y) is False\n"
+            "¬drive(Marcel,y) is False\n",
+            "¬human(y) is closed\n",
+            "¬electric(x) is closed\n"
           ]
         }
       ],
       "source": [
         "# instantiate formulas\n",
-        "formula1 = Neg(human, [Sabine]) # Sabine is not human\n",
+        "formula1 = Neg(human, [y]) # Sabine is not human\n",
         "formula2 = Neg(electric, [x])  # x is not electric\n",
         "formula3 = Neg(drive, [Marcel, y]) # Marcel does not drive y\n",
+        "formula4 = PredApp(human, [Sabine]) # Sabine is human\n",
         "print(f\"{formula1} is {formula1.check(m, f)}\") # False\n",
         "print(f\"{formula2} is {formula2.check(m, f)}\") # True\n",
-        "print(f\"{formula3} is {formula3.check(m, f)}\") # False"
+        "print(f\"{formula3} is {formula3.check(m, f)}\") # False\n",
+        "print(f\"{formula1} is {'' if formula1.check_closed(m) else 'not '}closed\") # False\n",
+        "print(f\"{formula2} is {'' if formula2.check_closed(m) else 'not '}closed\")"
       ]
     },
     {
@@ -684,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -719,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -749,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 21,
       "metadata": {
         "id": "R9w6TS_JOpgj"
       },
@@ -782,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -816,16 +821,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(∃y.human(y)) ∧ electric(y) is not closed\n",
-            "∃x.drive(Marcel,x) is closed\n",
-            "∃x.truck(x) is closed\n"
+            "(∃y.human(y)) ∧ electric(y) is False\n",
+            "∃x.drive(Marcel,x) is  True\n",
+            "∃x.truck(x) is  True\n"
           ]
         }
       ],
@@ -838,10 +843,10 @@
         "# instantiate conjunction\n",
         "conj1 = Conj(formula1, formula2) # y is human, and there exists y (in the model) such that y is electric\n",
         "ex1 = Ex(x, formula4) # There exists x such that Marcel drives x\n",
-        "# check closed\n",
-        "print(f\"{conj1} is {'' if conj1.check_closed(m) else 'not '}closed\") # not closed\n",
-        "print(f\"{ex1} is {'' if ex1.check_closed(m) else 'not '}closed\") # closed\n",
-        "print(f\"{formula3} is {'' if formula3.check_closed(m) else 'not '}closed\") # closed"
+        "# check closed formulas\n",
+        "print(f\"{conj1} is {conj.check_closed(m)}\") # False\n",
+        "print(f\"{ex1} is  {ex1.check_closed(m)}\") # True\n",
+        "print(f\"{formula3} is  {formula3.check_closed(m)}\") # True"
       ]
     }
   ],
